[package]
name = "korhal-image"
version = "0.1.0"
authors = ["Arvid E. Picciani <aep@exys.org>"]

[dependencies]
fuse = "0.3"
time = "0.1"
libc = "0.2"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

nix = "0.8.1"
sha2 = "0.6.0"
digest = { version = "0.6", features = ["std"]}
rollsum = "0.2.1"
pbr = "1.0.0"
clap = "2.26.0"

